<resources>
    <string name="app_name">Digital Wellness</string>
    <string name="facebook_app_id">153989346621942</string>
    <string name="fb_login_protocol_scheme">fb153989346621942</string>

    <string name="close">Close</string>
    <string name="create_account">Create Account</string>
    <string name="email_prompt">Email</string>
    <string name="email_sign_up">Sign up with email</string>
    <string name="facebook_sign_up">Continue with Facebook</string>
    <string name="first_name_prompt">First Name</string>
    <string name="forget_password">Forget password</string>
    <string name="google_sign_up">Continue with Google</string>
    <string name="last_name_prompt">Last Name</string>
    <string name="login">Already have an account?</string>
    <string name="open">Open</string>
    <string name="password_prompt">Password</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="video_not_found">Oops, no video matches the search.</string>
    <string name="step_goal">GOAL 10,000</string>
    <string name="seven_days">Past week</string>
    <string name="all_time">All time</string>
    <string name="zero">0</string>
    <string name="title_activity_maps">Map</string>
    <string name="current_distance">Current distance</string>
    <string name="show_maps">View distance travelled \non Google Maps</string>
    <string name="metres">metres</string>
    <string name="start">Start tracking distance</string>
    <string name="stop">Stop tracking</string>
    <string name="target_distance">Enter target distance (Metres)</string>
    <string name="enable_location_network">Please turn on both location services and WiFi/Mobile data.</string>
</resources>