<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".StartMenu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".StartMenu">


        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="297dp"
            android:layout_height="275dp"
            android:layout_marginTop="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/digitalwellnesslogo" />

        <Button
            android:id="@+id/googlereg"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@layout/loginbuttons"
            android:drawableLeft="@drawable/googlelogo"
            android:text="@string/google_sign_up"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <Button
            android:id="@+id/facebookreg"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@layout/loginbuttons"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/facebook_sign_up"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googlereg"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <Button
            android:id="@+id/mainRegister"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@layout/loginbuttons"
            android:drawableLeft="@drawable/emailic"
            android:text="@string/email_sign_up"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facebookreg"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <Button
            android:id="@+id/mainLogin"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:background="@layout/loginbuttons"
            android:text="@string/login"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainRegister"
            app:layout_constraintVertical_bias="0.01"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <Button
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/forget_password"
            android:textAllCaps="false"
            android:background="@color/black"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/mainLogin"
            app:layout_constraintTop_toBottomOf="@+id/mainLogin" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>